<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    >

    <TextView
        android:id="@+id/logintext"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/usename"
        android:layout_width="381dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:hint="@string/userid"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#424242"
        app:layout_constraintEnd_toEndOf="@+id/usename"
        app:layout_constraintStart_toStartOf="@+id/usename"
        app:layout_constraintTop_toBottomOf="@+id/usename" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />


    <Button
        android:id="@+id/loginbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/haveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/don_t_have_an_account"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/registerform"
        app:layout_constraintStart_toStartOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/registerform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/register"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forget_password"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/registerform"
        app:layout_constraintTop_toBottomOf="@+id/registerform" />


</androidx.constraintlayout.widget.ConstraintLayout>